--- a/04-Techno_Projeto/style.css
+++ b/04-Techno_Projeto/style.css
@@ -23,6 +23,34 @@ body {
   padding: 0 80px;
 }
 
+/* HEADER */
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  max-width: 900px;
+  padding: 20px 0;
+  margin: 0 auto;
+}
+.logo{
+  width: 80px;
+}
+
+.carrinho_menu::after{
+  content: "";
+  display: inline-block;
+  background: url("./assets/carrinho.svg") no-repeat;
+  width: 25px;
+  height: 25px;
+  margin-left: 10px;
+}
+
+.carrinho_menu{
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
 /* LISTA PRODUTOS */
 .produtos {
   max-width: 900px;
@@ -136,6 +164,9 @@ body {
   font-size: 1rem;
   padding: 10px 25px;
   font-family: "Noto Serif";
+}
+.modal_btn.esgotado{
+  background: #808080;
 }
 
 .modal_btn:active {
