--- a/04-Techno_Projeto/style.css
+++ b/04-Techno_Projeto/style.css
@@ -236,3 +236,87 @@ body {
     border: 2px solid black;
     box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.1), 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
+
+
+/* CARRINHO */
+.carrinho_modal::before{
+    content: "";
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100vh;
+    background: rgba( 0, 0, 0,.5);
+}
+.carrinho_modal{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    top:0px;
+    left: 0px;
+    width: 100%;
+    padding: 20px;
+    display: none;
+}
+.carrinho_modal.ativo{
+    display: block;
+}
+
+.carrinho_container{
+    position: relative;
+    margin: 80px auto;
+    background: #ffffff;
+    padding: 40px;
+    max-width: 800px;
+    animation: fadeInDown .3s forwards;
+}
+
+.carrinho_item{
+    display: grid;
+    grid-template-columns: 1fr 1fr 50px ;
+    border-bottom: 1px solid rgba(0,0,0,.1);
+    padding: 10px 0;
+}
+.carrinho_titulo{
+    margin-bottom: 10px;
+    padding-bottom: 20px;
+    border-bottom: 2px solid #000000;
+}
+.carrinho_remover{
+    border:none;
+    font-size: 1rem;
+    cursor: pointer;
+}
+.carrinho_preco{
+    text-align: right;
+}
+.carrinho_totao{
+    text-align: right;
+    padding: 10px 50px 10px 0;
+    margin-bottom: 20px;
+    border-bottom: 2px solid #000;
+}
+.carrinho_finalizar{
+    display: block;
+    margin-left: auto;
+    background: #000;
+    cursor: pointer;
+    color: #ffffff;
+    font-size: 1rem;
+    padding: 10px 25px;
+    border: none;
+    font-family: "Noto Serif";
+}
+
+.carrinho_fechar{
+    border-radius: 50%;
+    border: 2px solid #000;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    font-size: 1rem;
+    box-shadow: 0px 3px 4px rgba(0, 0, 0, .1), 0px 4px 10px rgba(0, 0, 0, .2);
+    cursor: pointer;
+}
