--- a/04-Techno_Projeto/style.css
+++ b/04-Techno_Projeto/style.css
@@ -320,3 +320,58 @@ body {
     box-shadow: 0px 3px 4px rgba(0, 0, 0, .1), 0px 4px 10px rgba(0, 0, 0, .2);
     cursor: pointer;
 }
+
+/* RESPONSIVO */
+
+@media screen and (max-width: 900px) {
+    #app {
+        padding: 0 10px;
+    }
+    .produtos {
+        margin-top: 40px;
+    }
+    .produto {
+        flex-direction: column;
+        align-items: flex-start;
+        max-width: 300px;
+        margin: 30px auto;
+    }
+    .produto_info {
+        padding: 20px;
+    }
+    .produto_img {
+        max-width: 100%;
+    }
+    .produto_titulo {
+        font-size: 1.5rem;
+    }
+    .modal {
+        padding: 10px;
+    }
+    .modal_container {
+        grid-gap: 20px;
+        background: #ffffff;
+        padding: 10px 0;
+    }
+    .modal_img {
+        grid-row: 2;
+    }
+    .modal_img img {
+        width: 100%;
+        max-width: initial;
+    }
+    .modal_dados {
+        grid-column: 1;
+        padding: 10px;
+    }
+    .modal_btn {
+        margin-top: 20px;
+    }
+    .avaliacoes {
+        grid-column: 1;
+        padding: 10px;
+    }
+    .carrinho_modal {
+        padding: 10px;
+    }
+}
